--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
+    "react-helmet": "^6.1.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.0.4",
