--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-persist": "^6.0.0",
     "stripe": "^14.11.0",
     "styled-components": "^6.1.6",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
   },
