--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-helmet": "^6.1.0",
