--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.0.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.21.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-use-scroll-position": "^2.0.0",
