--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.3.1",
+    "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "js-cookie": "^3.0.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
