--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "react-router-dom": "^6.21.1",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "react-slidy": "^4.3.3",
     "react-spinners": "^0.13.8",
     "react-use-scroll-position": "^2.0.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "stripe": "^14.11.0",
     "styled-components": "^6.1.6",
     "video-react": "^0.16.0",
