--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
+    "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
