--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "posthog-js": "^1.138.3",
     "react": "^18.2.0",
     "react-blurhash": "^0.3.0",
     "react-device-detect": "^2.2.3",
