--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.4.5",
     "graphql": "^16.8.1",
     "gsap": "^3.12.5",
+    "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
@@ -31,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-headroom": "^3.2.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^14.1.2",
     "react-lazy-load-image-component": "^1.6.0",
     "react-lazyload": "^3.2.1",
     "react-query": "^3.39.3",
